<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>7

    <!-- my full name -->
    <string name="my_full_name">Gabriel Josue Brieva Alvarez</string>

    <!-- app names -->

    <string name="spotify_streamer_app">Spotify Streamer</string>
    <string name="football_scores_app">Football Scores</string>
    <string name="library_app">Library</string>
    <string name="build_it_bigger_app">Build It Bigger</string>
    <string name="xyz_reader_app">XYZ Reader</string>
    <string name="capstone_app">Capstone</string>


</resources>
