<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PortfolioActivity"
    android:background="@color/main_background">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/imageView"
            android:src="@drawable/tuxan" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/my_full_name"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:gravity="center" />



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:baselineAligned="false"
                android:focusableInTouchMode="false">

                <!-- social contacts -->

                <ImageButton
                    style="@style/SocialButtonStyle"
                    android:id="@+id/ibGitHub"
                    android:src="@drawable/ic_github"
                    android:onClick="onSocialButtonTap" />

                <ImageButton
                    style="@style/SocialButtonStyle"
                    android:id="@+id/ibLinkedIn"
                    android:src="@drawable/ic_linkedin"
                    android:onClick="onSocialButtonTap" />

                <ImageButton
                    style="@style/SocialButtonStyle"
                    android:id="@+id/ibGooglePlus"
                    android:src="@drawable/ic_googleplus"
                    android:onClick="onSocialButtonTap" />

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

    <Button
        style="@style/AppButtonStyle"
        android:text="@string/spotify_streamer_app"
        android:id="@+id/bt_spotify"
        android:drawableLeft="@drawable/ic_spotify"
        android:onClick="onAppPortfolioButtonTap" />

    <Button
        style="@style/AppButtonStyle"
        android:text="@string/football_scores_app"
        android:id="@+id/bt_football_scores"
        android:drawableLeft="@drawable/ic_soccer"
        android:onClick="onAppPortfolioButtonTap" />

    <Button
        style="@style/AppButtonStyle"
        android:text="@string/library_app"
        android:id="@+id/bt_library"
        android:drawableLeft="@drawable/ic_library"
        android:onClick="onAppPortfolioButtonTap" />

    <Button
        style="@style/AppButtonStyle"
        android:text="@string/build_it_bigger_app"
        android:id="@+id/bt_build_it_bigger"
        android:onClick="onAppPortfolioButtonTap" />

    <Button
        style="@style/AppButtonStyle"
        android:text="@string/capstone_app"
        android:id="@+id/bt_capstone"
        android:onClick="onAppPortfolioButtonTap"
        android:backgroundTint="@color/default_tint" />

</LinearLayout>
